--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,38 +1,37 @@
-annotated-types==0.7.0
-anyio==4.9.0
+absl-py==2.2.1
+astunparse==1.6.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-exceptiongroup==1.2.2
-fastapi==0.115.12
-h11==0.14.0
-httptools==0.6.4
+flatbuffers==25.2.10
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.71.0
+h5py==3.13.0
 idna==3.10
-numpy==2.2.4
-PyAudio==0.2.14
-pydantic==2.11.1
-pydantic_core==2.33.0
-pydub==0.25.1
-python-dotenv==1.1.0
-PyYAML==6.0.2
+keras==3.9.1
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+ml_dtypes==0.5.1
+namex==0.0.8
+numpy==2.1.3
+opt_einsum==3.4.0
+optree==0.14.1
+packaging==24.2
+pillow==11.1.0
+protobuf==5.29.4
+Pygments==2.19.1
 requests==2.32.3
-sniffio==1.3.1
-starlette==0.46.1
-typing-inspection==0.4.0
+rich==14.0.0
+six==1.17.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.5.0
 typing_extensions==4.13.0
 urllib3==2.3.0
-uvicorn==0.34.0
-watchfiles==1.0.4
-Wave==0.0.2
-websockets==15.0.1
-cachetools==5.5.2
-certifi==2025.1.31
-google-auth==2.38.0
-google-genai==1.8.0
-httpcore==1.0.7
-httpx==0.28.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.11.1
-rsa==4.9
+Werkzeug==3.1.3
+wrapt==1.17.2
