--- a/frontend/krishi-hal-frontend/package.json
+++ b/frontend/krishi-hal-frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
     "@types/image-to-base64": "^2.1.2",
+    "framer-motion": "^12.6.2",
     "image-to-base64": "^2.2.0",
+    "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.17",
