solving dep error

--- a/frontend/krishi-hal-frontend/package.json
+++ b/frontend/krishi-hal-frontend/package.json
@@ -14,9 +14,12 @@
     "@types/image-to-base64": "^2.1.2",
     "framer-motion": "^12.6.2",
     "image-to-base64": "^2.2.0",
+    "lucide-react": "^0.485.0",
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.1",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.17",
     "wavesurfer.js": "^7.9.4"
   },
